# FaCoderTerminal

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: \u005f\u005finit\u005f\u005f.py  ai_client.py  api.py  catalog.py  main.py  matcher.py  models.py  normalizer.py  project_sync.py  pty_session.py  runner.py  security.py  store.py  temp_logger.py
docs/: 01 - PRD.md  02 - ARCHITECTURE.md  03 - GUIDELINES.md  04 - PLAN.md  04 - ROADMAP.md  05 - DEBUG.md
frontend/: app.js  index.html  styles.css
knowledge_base/: commands.ai_tools.json  commands.git.json  commands.system.json
simple_terminal/: README.md  SimplePersianPowerShell.bat  build_exe.bat  build_exe.ps1  main.py  simple_api.py  simple_pty.py
simple_terminal/web/: app.js  index.html  style.css
tests/: test_catalog.py  test_matcher.py
